RESOLVED FIXED303461
[OpenXR] ASSERT when creating projection layers
https://bugs.webkit.org/show_bug.cgi?id=303461
Summary [OpenXR] ASSERT when creating projection layers
Sergio Villar Senin
Reported 2025-12-03 01:06:33 PST
This is the dump (gdb) bt #0 0x00007fffee257fa9 in WTFCrash () at ./Source/WTF/wtf/Assertions.cpp:380 #1 0x00007fffe9099ceb in WTFCrashWithInfo () at ./WebKitBuild/WPE/Debug/WTF/Headers/wtf/Assertions.h:985 #2 0x00007fffe9153118 in WTF::assertIsCurrent (threadLikeAssertion=...) at ./WebKitBuild/WPE/Debug/WTF/Headers/wtf/ThreadAssertions.h:160 #3 0x00007fffeaf2c0a1 in WTF::CompletionHandler<void (std::optional<int>)>::operator()(std::optional<int>) (this=0x7fffcc0a03b0, in=std::optional = {...}) at ./WebKitBuild/WPE/Debug/WTF/Headers/wtf/CompletionHandler.h:92 #4 0x00007fffeaf35146 in WebKit::OpenXRCoordinator::createLayerProjection(unsigned int, unsigned int, bool, WTF::CompletionHandler<void (std::optional<int>)>&&)::$_0::operator()(WebKit::OpenXRCoordinator::Active&) const::{lambda()#1}::operator()() (this=0x7fffcc0a0398) at ./Source/WebKit/UIProcess/XR/openxr/PlatformXROpenXR.cpp:228 #5 0x00007fffeaf34e89 in WTF::Detail::CallableWrapper<WebKit::OpenXRCoordinator::createLayerProjection(unsigned int, unsigned int, bool, WTF::CompletionHandler<void (std::optional<int>)>&&)::$_0::operator()(WebKit::OpenXRCoordinator::Active&) const::{lambda()#1}, void>::call() (this=0x7fffcc0a0390) at ./WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:59 #6 0x00007fffe90e39a7 in WTF::Function<void ()>::operator()() const (this=0x7fffcc098af0) at ./WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:103 a completion handler that is not running in the right thread
Attachments
Sergio Villar Senin
Comment 1 2025-12-03 01:09:22 PST
EWS
Comment 2 2025-12-03 03:56:03 PST
Committed 303827@main (03f2df943128): <https://commits.webkit.org/303827@main> Reviewed commits have been landed. Closing PR #54759 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-12-03 03:57:12 PST
Note You need to log in before you can comment on or make changes to this bug.